--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^7.0.3"
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2"
   },
   "node": {
     "fs": false,
